--- a/src/styles/css/game.css
+++ b/src/styles/css/game.css
@@ -3441,10 +3441,10 @@ html {
   -webkit-box-shadow: 0px 0px 3px 2px rgba(255, 236, 66, 0.97);
   box-shadow: 0px 0px 3px 2px rgba(255, 236, 66, 0.97);
 }
-.game-html .flipped.status_active ~ div .pocker img {
+/* .game-html .flipped.status_active ~ div .pocker img {
   -webkit-filter: brightness(0.5);
   filter: brightness(0.5);
-}
+} */
 @-webkit-keyframes mymove {
   from {
     -webkit-transition: ease-in 0.5s !important;
